generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
  output   = "./dbml"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum UserRole {
  admin
  commercial
  pricing
  planning
}

enum OverhaulState {
  definicion
  aprobado
  cancelado
}

enum Currency {
  USD
  PEN
}

// Source column: "Tipo Flota" in the fleet TSV
enum CategoriaFlota {
  EXPANDIDA
  TRADICIONAL
}

// Source column: "Flota" in the fleet TSV
enum FlotaTipo {
  DRILLS
  SHOVEL
  AUX_FLEET
  SUPPORT
  TRUCKS
}

enum ComponentState {
  Nuevo
  Reman
  RGeneral
  Resellado
  Reutilizar
  Cliente
}

model User {
  id              String                  @id @default(cuid())
  name            String
  email           String                  @unique
  passwordHash    String
  role            UserRole
  necesidades     OverhaulNecesidad[]
  alcances        OverhaulAlcance[]
  tarifas         OverhaulTarifas[]
  propuestas      OverhaulPropuesta[]
  planificaciones OverhaulPlanificacion[]
  createdAt       DateTime                @default(now())
  updatedAt       DateTime                @updatedAt
}

model Overhaul {
  id            String                  @id @default(cuid())
  state         OverhaulState           @default(definicion)
  createdAt     DateTime                @default(now())
  updatedAt     DateTime                @updatedAt
  necesidad     OverhaulNecesidad[]
  alcance       OverhaulAlcance[]
  tarifas       OverhaulTarifas[]
  propuesta     OverhaulPropuesta[]
  planificacion OverhaulPlanificacion[]
}

model OverhaulNecesidad {
  id              String                     @id @default(cuid())
  overhaulId      String
  overhaul        Overhaul                   @relation(fields: [overhaulId], references: [id], onDelete: Cascade)
  proyecto        String
  clienteId       String
  cliente         MasterCliente              @relation(fields: [clienteId], references: [id])
  ubicacion       String
  tallerDestinoId String
  tallerDestino   MasterTaller               @relation(fields: [tallerDestinoId], references: [id])
  fechaEstimada   DateTime
  fechaTarifa     DateTime
  maquinas        OverhaulNecesidadMaquina[]
  version         Int                        @default(1)
  isCompleted     Boolean                    @default(false)
  completedAt     DateTime?
  createdById     String?
  createdBy       User?                      @relation(fields: [createdById], references: [id], onDelete: SetNull)
  createdAt       DateTime                   @default(now())
  updatedAt       DateTime                   @updatedAt

  @@index([overhaulId, version])
}

model OverhaulNecesidadMaquina {
  id          String            @id @default(cuid())
  necesidadId String
  necesidad   OverhaulNecesidad @relation(fields: [necesidadId], references: [id], onDelete: Cascade)
  maquinaId   String
  maquina     Maquina           @relation(fields: [maquinaId], references: [id])
  createdAt   DateTime          @default(now())

  @@unique([necesidadId, maquinaId])
}

model OverhaulAlcance {
  id          String                  @id @default(cuid())
  overhaulId  String
  overhaul    Overhaul                @relation(fields: [overhaulId], references: [id], onDelete: Cascade)
  resumen     String                  @default("")
  systems     OverhaulAlcanceSystem[]
  version     Int                     @default(1)
  isCompleted Boolean                 @default(false)
  completedAt DateTime?
  createdById String?
  createdBy   User?                   @relation(fields: [createdById], references: [id], onDelete: SetNull)
  createdAt   DateTime                @default(now())
  updatedAt   DateTime                @updatedAt

  @@index([overhaulId, version])
}

model OverhaulAlcanceSystem {
  id         String                     @id @default(cuid())
  alcanceId  String
  alcance    OverhaulAlcance            @relation(fields: [alcanceId], references: [id], onDelete: Cascade)
  name       String
  position   Int
  components OverhaulAlcanceComponent[]
  createdAt  DateTime                   @default(now())

  @@unique([alcanceId, position])
}

model OverhaulAlcanceComponent {
  id          String                @id @default(cuid())
  systemId    String
  system      OverhaulAlcanceSystem @relation(fields: [systemId], references: [id], onDelete: Cascade)
  name        String
  state       ComponentState
  tallerId    String?
  taller      MasterTaller?         @relation(fields: [tallerId], references: [id])
  atencionId  String?
  atencion    MasterAtencion?       @relation(fields: [atencionId], references: [id])
  comentarios String?
  position    Int
  createdAt   DateTime              @default(now())

  @@unique([systemId, position])
}

model OverhaulTarifas {
  id          String                   @id @default(cuid())
  overhaulId  String
  overhaul    Overhaul                 @relation(fields: [overhaulId], references: [id], onDelete: Cascade)
  currency    Currency                 @default(USD)
  total       Decimal                  @default(0) @db.Decimal(18, 2)
  groups      OverhaulTarifaGroupJob[]
  partes      OverhaulTarifaParte[]
  version     Int                      @default(1)
  isCompleted Boolean                  @default(false)
  completedAt DateTime?
  createdById String?
  createdBy   User?                    @relation(fields: [createdById], references: [id], onDelete: SetNull)
  createdAt   DateTime                 @default(now())
  updatedAt   DateTime                 @updatedAt

  @@index([overhaulId, version])
}

model OverhaulTarifaGroupJob {
  id        String              @id @default(cuid())
  tarifaId  String
  tarifa    OverhaulTarifas     @relation(fields: [tarifaId], references: [id], onDelete: Cascade)
  name      String
  horas     Decimal             @default(0) @db.Decimal(12, 2)
  position  Int
  jobs      OverhaulTarifaJob[]
  createdAt DateTime            @default(now())
  updatedAt DateTime            @updatedAt

  @@unique([tarifaId, position])
  @@index([tarifaId])
}

model OverhaulTarifaJob {
  id            String                 @id @default(cuid())
  groupJobId    String
  groupJob      OverhaulTarifaGroupJob @relation(fields: [groupJobId], references: [id], onDelete: Cascade)
  name          String
  materialAndMo Decimal                @default(0) @db.Decimal(18, 2)
  miscelaneos   Decimal                @default(0) @db.Decimal(18, 2)
  repuestos     Decimal                @default(0) @db.Decimal(18, 2)
  position      Int
  createdAt     DateTime               @default(now())
  updatedAt     DateTime               @updatedAt

  @@unique([groupJobId, position])
  @@index([groupJobId])
}

model OverhaulTarifaParte {
  id                 String          @id @default(cuid())
  tarifaId           String
  tarifa             OverhaulTarifas @relation(fields: [tarifaId], references: [id], onDelete: Cascade)
  segmentacion       String
  componentCode      String
  jobCode            String
  parentPartName     String
  groupNumber        String
  partNumber         String
  partNumberSap      String
  partName           String
  quantity           Decimal         @default(0) @db.Decimal(14, 4)
  replacementPercent Decimal         @default(0) @db.Decimal(7, 4)
  dealerNet          Decimal         @default(0) @db.Decimal(18, 2)
  costoInterno       Decimal         @default(0) @db.Decimal(18, 2)
  pu                 Decimal         @default(0) @db.Decimal(18, 2)
  subtotal           Decimal         @default(0) @db.Decimal(18, 2)
  clasificacion      String
  notas              String?
  motivo             String?
  position           Int
  createdAt          DateTime        @default(now())
  updatedAt          DateTime        @updatedAt

  @@unique([tarifaId, position])
  @@index([tarifaId, partNumber])
  @@index([tarifaId, jobCode])
}

model OverhaulPropuesta {
  id                     String                                @id @default(cuid())
  overhaulId             String
  overhaul               Overhaul                              @relation(fields: [overhaulId], references: [id], onDelete: Cascade)
  emision                DateTime?
  contactoNombre         String                                @default("")
  contactoUbicacion      String                                @default("")
  contactoTelefono       String?
  contactoEmail          String?
  condiciones            String[]                              @default([])
  inclusionesExclusiones OverhaulPropuestaInclusionExclusion[]
  fechaReparacion        DateTime?
  terminosGenerales      String                                @default("")
  garantias              String                                @default("")
  propuestaUri           String                                @default("")
  version                Int                                   @default(1)
  isCompleted            Boolean                               @default(false)
  completedAt            DateTime?
  createdById            String?
  createdBy              User?                                 @relation(fields: [createdById], references: [id], onDelete: SetNull)
  createdAt              DateTime                              @default(now())
  updatedAt              DateTime                              @updatedAt

  @@index([overhaulId, version])
}

model OverhaulPropuestaInclusionExclusion {
  id          String            @id @default(cuid())
  propuestaId String
  propuesta   OverhaulPropuesta @relation(fields: [propuestaId], references: [id], onDelete: Cascade)
  systemName  String
  components  String[]          @default([])
  inclusiones String[]          @default([])
  exclusiones String[]          @default([])
  position    Int
  createdAt   DateTime          @default(now())

  @@unique([propuestaId, position])
}

model OverhaulPlanificacion {
  id          String    @id @default(cuid())
  overhaulId  String
  overhaul    Overhaul  @relation(fields: [overhaulId], references: [id], onDelete: Cascade)
  fechaInicio DateTime?
  fechaFin    DateTime?
  version     Int       @default(1)
  isCompleted Boolean   @default(false)
  completedAt DateTime?
  createdById String?
  createdBy   User?     @relation(fields: [createdById], references: [id], onDelete: SetNull)
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  @@index([overhaulId, version])
}

model MasterCliente {
  id          String              @id @default(cuid())
  name        String              @unique
  contact     String?
  email       String?
  maquinas    Maquina[]
  necesidades OverhaulNecesidad[]
  createdAt   DateTime            @default(now())
}

model MasterTaller {
  id          String                     @id @default(cuid())
  name        String                     @unique
  location    String?
  capacity    Int?
  necesidades OverhaulNecesidad[]
  componentes OverhaulAlcanceComponent[]
  createdAt   DateTime                   @default(now())
}

model MasterAtencion {
  id          String                     @id @default(cuid())
  name        String                     @unique
  description String?
  componentes OverhaulAlcanceComponent[]
  createdAt   DateTime                   @default(now())
}

model MasterFabricante {
  id        String                @id @default(cuid())
  name      String                @unique
  modelos   MasterMaquinaModelo[]
  createdAt DateTime              @default(now())
}

model MasterMaquinaModelo {
  id           String            @id @default(cuid())
  modelo       String            @unique
  type         String
  description  String?
  fabricanteId String?
  fabricante   MasterFabricante? @relation(fields: [fabricanteId], references: [id])
  categoria    CategoriaFlota?
  flota        FlotaTipo?
  systems      MasterSystem[]
  maquinas     Maquina[]
  createdAt    DateTime          @default(now())

  @@index([fabricanteId])
}

model Maquina {
  id          String                     @id @default(cuid())
  modeloId    String
  modelo      MasterMaquinaModelo        @relation(fields: [modeloId], references: [id])
  clienteId   String
  cliente     MasterCliente              @relation(fields: [clienteId], references: [id])
  serie       String
  idEquipo    String?                    @unique
  estado      String                     @default("Activo")
  fechaInicio DateTime?
  fechaFin    DateTime?
  necesidades OverhaulNecesidadMaquina[]
  createdAt   DateTime                   @default(now())
  updatedAt   DateTime                   @updatedAt

  @@unique([modeloId, serie])
  @@index([clienteId])
}

model MasterSystem {
  id          String              @id @default(cuid())
  name        String
  modeloId    String
  modelo      MasterMaquinaModelo @relation(fields: [modeloId], references: [id], onDelete: Cascade)
  description String?
  components  MasterComponent[]
  createdAt   DateTime            @default(now())

  @@unique([modeloId, name])
}

model MasterComponent {
  id        String       @id @default(cuid())
  name      String
  systemId  String
  system    MasterSystem @relation(fields: [systemId], references: [id], onDelete: Cascade)
  code      String?
  createdAt DateTime     @default(now())

  @@unique([systemId, name])
}
